# Deadlines_Edge_2D

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/levels/: level1.txt  level2.txt  level3.txt
include/: Animation.h  Character.h  Constants.h  Entity.h  Game.h  GameState.h  InputManager.h  LightingSystem.h  ParallaxBackground.h  ParticleSystem.h  PhysicsWorld.h  Player.h  Remnant.h  ResourceManager.h  TileMap.h  TmxLoader.h  Utility.h
src/: Character.cpp  Game.cpp  InputManager.cpp  LightingSystem.cpp  ParallaxBackground.cpp  ParticleSystem.cpp  PhysicsWorld.cpp  Player.cpp  Remnant.cpp  TileMap.cpp  TmxLoader.cpp  main.cpp
